# pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
html/: index.css  index.html
pipeline/: __init__.py  __main__.py  price_api.py  transform.py
