[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline"
version = "0.1.0"
description = "T-Cloud pricing data pipeline"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
]

[project.scripts]
pipeline = "pipeline.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "py-cyclo",
    "detect-secrets",
]
